<resources>
    <string name="app_name">Calculadora</string>
    <string name="item_1">Item 1</string>
    <string name="item3">item3</string>
    <string name="item2">item2</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="sqrt">sqrt(</string>
    <string name="tan">tan(</string>
    <string name="sin">sin(</string>
    <string name="cos">cos(</string>
    <string name="parentesisclose">)</string>
    <string name="parentesisopen">(</string>
...
    <string name="guion">-</string>
    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="mas">+</string>
    <string name="resultado">Resultado:</string>
    <string name="snackbar_text">Usuario registrado con éxito!</string>
    <string name="snackbar_action">Login</string>
    <string name="channelName">default</string>
    <string name="channelDescription">Canal para notificar errores de login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_options">User options</string>
    <string name="logout">Logout</string>
    <string name="calculadora">Calculadora</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="nom">Nom</string>
    <string name="cognom">Cognom</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="game">Game</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="titleapp">JediFinalApp</string>
    <string name="ranking">Ranking</string>
    <string name="local">Local</string>
    <string name="global">Global</string>
</resources>

